Fixed color contrast problem

--- a/styles/filtered-temple.css
+++ b/styles/filtered-temple.css
@@ -18,7 +18,7 @@ header, main {
 }
 
 h1 {
-    color: white;
+    color: #000;
     font-size: 48px;
 }
 
@@ -31,7 +31,7 @@ nav {
 
 nav a {
     display: none;
-    color: white;
+    color: #000;
     text-align: center;
     padding: 1rem;
     text-decoration: none;
